# CUDA

./: H100.txt
01_matMult/: 01_matrix_mult.cu  03_shmem_register.cu
01_vector_add/: a.out  vector_add.cu
02_WMMA/: 01_wmma_matrix_mult.cu  02_wmma_matrix_mult_shared_mem.cu
02_matMult/: 2d_mat_mult.cu  a.out  main.cu
03_WGMMA/: 01_naive_wmma_example.cu  02_GEMM_wgmma.cu  03_GEMM_wgmm_shmem.cu  04_GEMM_wgmm_buffered_shmem.cu  wmma_example.cu
03_prefixsum/: 01_cpu_prefix_sum.cpp  02_gpu_naive.cu  03_prefixSum_shared.cu  a.out
04_warp_instructions/: 01_shuffle_sync.cu  02_shuffle_up.cu  03_shuffle_down.cu  04_reduce_add.cu  05_match_any_sync.cu  06_match_all_sync.cu  a.out
05_multigpu_comm/: 00_machine_output.txt  00_task.txt  01_get_device_properties.cu  01_muti_gpu_data_transfer.cu  02_3_gpu_bw_test.cu  03_4_gpu_bw_test.cu  03_p2p_check.cu  04_non_peer_test.cu  05_broadcast_test.cu  06_send_recieve.cu  07_reduce.cu  08_allreduce.cu  09_all_gather.cu  10_reduce_scatter.cu  test.cu
05_tiled_mat_mult/: mat_mult.cu
05_tiled_mat_mult/step1/: 01_cpu_mat_mult.cpp
05_tiled_mat_mult/step2/: matmult
05_tiled_mat_mult/step3/: matmul
05_tiled_mat_mult/step4/: CMakeLists.txt
05_tiled_mat_mult/step5_shared_mem/: #include <iostream>.cpp
06_CUDA_streams/: 01_streams.cu
06_vector_add_faster/: 2_pinned_mem.cu  4_cuda_stream.cu  a.out  main.cu
07_RTX/: CMakeLists.txt  main.cpp  shader.cu
07_array_sum/: 01_array_sum.cu  02_array_sum.cpp  a.out
08_Cuda_fdtd/: 08_cuda_fdtd.cu
09_parallel_FDTD/: CMakeLists.txt
09_parallel_FDTD/include/: global_variables.h
09_parallel_FDTD/src/: Mesh2D.cpp  fdtd_2d.cpp  fdtd_2d.cu  global_variables.cpp  main.cpp  temp.cu  vtkWriter.cpp
09_parallel_FDTD/test/: control_file.json  script.sh
10_FFT/: a.out  fft.cpp  gpuFFT.cu
11_nsight_compute_tutorial/: 01_uncoalesced  01_uncoalesced.cu  02_coalesced  02_coalesced.cu  03_shared  03_shared.cu  a.out  report_matmul.csv  report_na_fix.csv
12_reduction/: 01_cpu_implementaion.cu  02_naive_implementation.cu  03_reduction_using_warps.cu  a.out
13_CUDA_Masterclass/: 01_CUDA_Fundamentals.txt  02_sum_2_array.cu  03_sum_3_array.cu  04_device_properties.cu  05_matrix_transpose.cpp  06_gpu_transpose  06_gpu_transpose.cu  a.out  array_add.ncu-rep  array_sum.ncu-rep  device  report.csv  sum2  sum3
1_vector_add/: 1  benchmark.cu
2_matMult/: main.cu  mat_mult.cu
3_prefixsum/: a.out  parallel_prefix_sum.cu  prefix_sum.cu  shared_mem_prefix_sum.cu
5_tiled_mat_mult/: README.md
5_tiled_mat_mult/step1/: a.out
5_tiled_mat_mult/step2/: 02_cpu_gpu_mat_mult.cu
5_tiled_mat_mult/step3/: 03_cpu_gpu_benchmarked_code.cu
5_tiled_mat_mult/step4/: 04_cublas_benchmark.cu
5_tiled_mat_mult/step5_shared_mem/: 05_cpu_gpu_mat_mult.cu
6_vector_add_faster/: 3_gpu_clock.cu  5_restrict_vect_add.cu
practice/: 01_matrix_mult.cu  02_matrix_mult_shared_mem  02_matrix_mult_shared_mem.cu  03_pararllel_sum_reduction.cu  04_rule_of_5.cpp  05_unique_ptr_example.cpp  06_shared_ptr_example.cpp  07_weak_ptr_example.cpp  a.out  matrix_mult
